README: актуализирована структура проекта, убран устаревший ручной рецепт jpackage, добавлена проверка обновлений